[package]
name = "bevy-pyo3-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bevy_pyo3_test"
crate-type = ["cdylib"]

[dependencies]
bevy = { version = "0.16", default-features = false, features = [
  "std",
  "async_executor",
  # "android-game-activity",
  # "android_shared_stdcxx",
  "animation",
  "bevy_asset",
  "bevy_audio",
  "bevy_color",
  "bevy_core_pipeline",
  "bevy_gilrs",
  "bevy_gizmos",
  "bevy_gltf",
  "bevy_input_focus",
  "bevy_log",
  "bevy_mesh_picking_backend",
  "bevy_pbr",
  "bevy_picking",
  "bevy_render",
  "bevy_scene",
  "bevy_sprite",
  "bevy_sprite_picking_backend",
  "bevy_state",
  "bevy_text",
  "bevy_ui",
  "bevy_ui_picking_backend",
  "bevy_window",
  # "bevy_winit",
  "custom_cursor",
  "default_font",
  "hdr",
  "multi_threaded",
  "png",
  "smaa_luts",
  "sysinfo_plugin",
  "tonemapping_luts",
  "vorbis",
  "webgl2",
  "x11",
] }
bincode = { version = "2.0.1", features = ["serde"] }
crossbeam = { version = "0.8.4", features = ["crossbeam-channel", "nightly"] }
image = { version = "0.25.8", features = ["serde"] }
noise = { version = "0.9.0", features = ["std"] }
pyo3 = "0.26"
rand = { version = "0.9.2", features = ["nightly"] }

# maybe add serde and bincode to compress image
